MGRENTITLE-19 Provide StageContext wrapper for stage methods (#28)
* MGRENTITLE-19 Provide StageContext wrapper for stage methods

- Use spring-core to resolve generic for interface
- Remove Cancellable, Recoverable and Listenable interfaces
- Move all stage methods to Stage.class
- Add unit tests to verify that new functionality works as expected
- Add an ability to specify wrapper objects in interface generics
- Fix an issue with CGLib proxies
- Handle errors gracefully during dynamic stage creation
- Add stage type to StageReportProvider
- Add validation for formattedStageId parameter
- Remove null keys and values from flow parameters
- Fix missing flow parameter if the flow was skipped