@@ -1,7 +1,6 @@
 package org.folio.flow.utils;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static org.folio.flow.model.ExecutionStatus.CANCELLED;
 import static org.folio.flow.model.ExecutionStatus.FAILED;
@@ -17,6 +16,7 @@ import org.folio.flow.api.DynamicStage;
 import org.folio.flow.api.Flow;
 import org.folio.flow.api.ParallelStage;
 import org.folio.flow.api.Stage;
+import org.folio.flow.api.StageContext;
 import org.folio.flow.impl.DefaultStageExecutor;
 import org.folio.flow.impl.DynamicStageExecutor;
 import org.folio.flow.impl.FlowExecutor;
@@ -74,7 +74,7 @@ public class FlowUtils {
    * @param stage - stage as {@link Stage} object
    * @return {@link StageExecutor} object
    */
-  public static StageExecutor getStageExecutor(Stage stage) {
+  public static <T extends StageContext> StageExecutor getStageExecutor(Stage<T> stage) {
     if (stage instanceof Flow flow) {
       return new FlowExecutor(flow);
     }
@@ -87,7 +87,7 @@ public class FlowUtils {
       return new DynamicStageExecutor(dynamicStage);
     }
 
-    return new DefaultStageExecutor(stage);
+    return new DefaultStageExecutor<>(stage);
   }
 
   /**
@@ -148,7 +148,7 @@ public class FlowUtils {
     return stageResultList.stream()
       .map(StageResultHolder::getResult)
       .map(StageResult::from)
-      .collect(toList());
+      .toList();
   }
 
   /**
